--- a/cv.html
+++ b/cv.html
@@ -445,15 +445,7 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
-      <div class="year"></div><div class="paper"><h4>&emsp;I: Univariate Polynomials and Hypersurfaces</h4></div>
-       <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://who.paris.inria.fr/Elias.Tsigaridas/index.html">Elias Tsigaridas</a>)</div>
-       <div class="pretalktitle"></div><div class="collaborator">Accepted at ISSAC'20.</div>
-       <!--<div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto and E. Tsigaridas. Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces. In <i>Proceedings of the 2020 on International Symposium on Symbolic and Algebraic Computation</i>, <a href="#ISSAC2020">ISSAC'20</a>, pages xyz-XYZ. ACM, New York, 2020. <span><a href="https://doi.org/10.1145/3373207.3404054">DOI 10.1145/3373207.3404054</a></span></div>-->
-      </div>
-
-      <br/><div class="cv">
-      <div class="year"><h4></h4></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
+      <div class="year"></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
        <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> and <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a>)</div>
        <div class="pretalktitle"></div><div class="collaborator">This is a journal version of <em>Plantinga-Vegter algorithm takes average polynomial time</em>.</div>
       </div>
@@ -463,9 +455,8 @@
        <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/prof_dr_peter_buergisser/">Peter B&uuml;rgisser</a> and <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a>)</div>
       </div>
 
-
       <br/><div class="row"><div class="col-md-12">
-      <h3>Papers</h3>
+      <h3>Journal papers</h3>
       </div></div>
 
       <br/><div class="cv">
@@ -475,13 +466,24 @@
       </div>
 
       <br/><div class="cv">
-      <div class="year"></div><div class="paper"><h4>&emsp;Plantinga-Vegter algorithm takes average polynomial time<a class="btn btn-arxiv" href="https://arxiv.org/abs/1901.09234"  role="button">arXiv:1901.09234</a></h4></div>
-       <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r and J. Tonelli-Cueto. Plantinga-Vegter Algorithm takes Average Polynomial Time. In <i>Proceedings of the 2019 on International Symposium on Symbolic and Algebraic Computation</i>, <a href="#ISSAC2019">ISSAC'19</a>, pages 114-121. ACM, New York, 2019. <span><a href="https://doi.org/10.1145/3326229.3326252">DOI 10.1145/3326229.3326252</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3326229.3326252?cid=99659444592">[Author-Ized LINK]</a></span></div>
-      </div>
-
-      <br/><div class="cv">
       <div class="year"></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets. I: Lax Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1807.06435"  role="button">arXiv:1807.06435</a></h4></div>
        <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker and J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. I: Lax Formulas, <i>Foundations of Computational Mathematics</i>, 20(1):71-119, 2020. First on-line: May 2019. <span><a href="https://doi.org/10.1007/s10208-019-09418-y">DOI 10.1007/s10208-019-09418-y</a></span></div>
+      </div>
+
+      <br/><div class="row"><div class="col-md-12">
+      <h3>Conference papers</h3>
+      </div></div>
+
+      <br/><div class="cv">
+      <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
+      <div class="year"></div><div class="paper"><h4>&emsp;I: Univariate Polynomials and Hypersurfaces</h4></div>
+      <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r and J. Tonelli-Cueto. Plantinga-Vegter Algorithm takes Average Polynomial Time. In <i>Proceedings of the 2020 on International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'20, pages 434-441. ACM, New York, 2020. <span><a href="https://doi.org/10.1145/3373207.3404054">DOI 10.1145/3373207.3404054</a></span> <!--<span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3326229.3326252?cid=99659444592">[Author-Ized LINK]</a></span>--></div>
+      </div>
+
+
+      <br/><div class="cv">
+      <div class="year"></div><div class="paper"><h4>&emsp;Plantinga-Vegter algorithm takes average polynomial time<a class="btn btn-arxiv" href="https://arxiv.org/abs/1901.09234"  role="button">arXiv:1901.09234</a></h4></div>
+       <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r and J. Tonelli-Cueto. Plantinga-Vegter Algorithm takes Average Polynomial Time. In <i>Proceedings of the 2019 on International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'19, pages 114-121. ACM, New York, 2019. <span><a href="https://doi.org/10.1145/3326229.3326252">DOI 10.1145/3326229.3326252</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3326229.3326252?cid=99659444592">[Author-Ized LINK]</a></span></div>
       </div>
 
       <br/><div class="row"><div class="col-md-12">
@@ -514,9 +516,9 @@
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          <br/><div class="cv">
-         <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2020">45th International Symposium on Symbolic and Algebraic Computations (ISSAC 2020)</a><span style="float:right;"><a href="pdf/ISSAC20_slides.pdf">Slides</a></span></h4></div>
+         <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2020">45th International Symposium on Symbolic and Algebraic Computations (ISSAC 2020)</a><span style="float:right;"><a href="https://www.youtube.com/watch?v=OmXZw7ZbCsA">Video</a></span></h4></div>
+           <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line talk due to the COVID-19 pandemic)<span style="float:right;"><a href="pdf/ISSAC20_slides.pdf">Slides</a></span></div>
            <div class="pretalktitle"></div><div class="talktitle">Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</div>
-           <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line talk due to the COVID-19 pandemic)</div>
          </div>
 
          <br/><div class="cv">
@@ -544,7 +546,7 @@
    </div>
 
 <br/><div class="cv">
-<div class="year"></div><div class="title"><h4>&emsp;<a href="#openingeinstein">Opening Conference of the Thematic Einstein Semester on Algebraic Geometry</a><span style="float:right;"><a href="https://vimeo.com/369919190">Link to the video</a></span></h4></div>
+<div class="year"></div><div class="title"><h4>&emsp;<a href="#openingeinstein">Opening Conference of the Thematic Einstein Semester on Algebraic Geometry</a><span style="float:right;"><a href="https://vimeo.com/369919190">Video</a></span></h4></div>
  <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20191007.html">What is the probabilistic analysis of a condition number?</a></div>
 </div>
 
@@ -574,7 +576,7 @@
       </div>
 
       <br/><div class="cv">
-      <div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#7BMSStudConf">7th BMS Student Conference</a><!--<span style="float:right;"><a href="">Link to the video</a></span>--></h4></div>
+      <div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#7BMSStudConf">7th BMS Student Conference</a><!--<span style="float:right;"><a href="">Video</a></span>--></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">How many zeros does a random fewnomial system have?</div>
       </div>
 
@@ -592,7 +594,7 @@
       </div>
 
       <br/><div class="cv">
-      <div class="year"></div><div class="title"><h4>&emsp;<a href="#6BMSStudConf">6th BMS Student Conference</a><span style="float:right;"><a href="https://vimeo.com/272577693">Link to the video</a></span></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#6BMSStudConf">6th BMS Student Conference</a><span style="float:right;"><a href="https://vimeo.com/272577693">Video</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">The Niyogi-Smale-Weinberger Approximation Theorem</div>
       </div>
 
@@ -610,7 +612,7 @@
       </div>
 
       <br/><div class="cv">
-      <div class="year"></div><div class="title"><h4>&emsp;<a href="#5BMSStudConf">5th BMS Student Conference</a><span style="float:right;"><a href="https://vimeo.com/222339083">Link to the video</a></span></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#5BMSStudConf">5th BMS Student Conference</a><span style="float:right;"><a href="https://vimeo.com/222339083">Video</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">The shadow of the hidden combinatorics of completely positive operators on Polynomial Identity Testing</div>
       </div>
 
@@ -711,35 +713,35 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2018</h4></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/305120572">Link to the video</a></span></h4></div>
+      <div class="year"><h4>2018</h4></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/305120572">Video</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20181207.html">What is the best voting system?</a></div>
        <div class="property">Location:</div><div class="value">Berlin, Germany</div>
        <div class="property">Date:</div><div class="value">7th of December of 2018</div>
       </div>
 
       <br/><div class="cv">
-      <div class="year"></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/281268225">Link to the video</a></span></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/281268225">Video</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20180629.html">What are semialgebraic sets in context?</a></div>
        <div class="property">Location:</div><div class="value">Berlin, Germany</div>
        <div class="property">Date:</div><div class="value">29th of June of 2018</div>
       </div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2017</h4></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/277075223">Link to the video</a></span></h4></div>
+      <div class="year"><h4>2017</h4></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/277075223">Video</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20170630.html">What are BPP, RP and the other probabilistic complexity classes?</a></div>
        <div class="property">Location:</div><div class="value">Berlin, Germany</div>
        <div class="property">Date:</div><div class="value">30th of June of 2017</div>
       </div>
 
       <br/><div class="cv">
-      <div class="year"></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/203591928">Link to the video</a></span></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/203591928">Video</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20170127.html">What is the length of a potato?</a></div>
        <div class="property">Location:</div><div class="value">Berlin, Germany</div>
        <div class="property">Date:</div><div class="value">27th of January of 2017</div>
       </div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2016</h4></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/160594229">Link to the video</a></span></h4></div>
+      <div class="year"><h4>2016</h4></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/160594229">Video</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20160205.html">What is an Origami Constructible Number?</a></div>
        <div class="property">Location:</div><div class="value">Berlin, Germany</div>
        <div class="property">Date:</div><div class="value">5th of February of 2016</div>
@@ -889,7 +891,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
    ================================================== -->
 
       <div class="row"><div class="col-md-12">
-      <h2 class="display-4">Popular Mathematics</h2>
+      <h2 class="display-4">Communication/Popularization of Mathematics</h2>
       </div></div>
 
     <!-- PopMath Projects
