--- a/multimedia_es.html
+++ b/multimedia_es.html
@@ -399,41 +399,50 @@
 <hr>
 <div id="videos">
   <h2 class="display-4">Vídeos</h2>
-  <h3>Videos de charlas en la Berlin Mathematical School</h3>
-  <p>Estos son solo algunos de mis vídeos en la Berlin Mathematical School (BMS), un comendio completo de mis charlas en la BMS se puede encontrar en <a href="https://vimeo.com/album/5309843"><em>Vimeo album 5309843</em></a>.</p>
+  <h3>Vídeos de ponencias en conferencias</h3>
+  <p>Estos son vídeos de algunas de mis ponencias en conferencias. Los vídeos disponibles en YouTube están recogidos en una <a href="https://www.youtube.com/playlist?list=PL_f-VNpYlzl3t7vl6w_CL8MF_EjEex_l9"><em>lista de reproducción de YouTube</em></a>.</p>
+  <div class="row">
+    <div class="col-md-3" style="padding-top:1em;"></div>
+    <div class="col-md-6" style="padding-top:1em;">
+       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/OmXZw7ZbCsA" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+       <p style="text-align:center;"><b style="color:#ee2523;">Condition Numbers for the Cube.<br/>I: Univariate Polynomials and Hypersurfaces</b><br/>ISSAC'20, julio de 2020</p>
+    </div>
+  </div>
+  <h3>Vídeos de charlas en la Berlin Mathematical School</h3>
+  <p>Esta es una selección de algunas de mis charlas grabadas en la Berlin Mathematical School (BMS), un comendio completo de mis charlas grabadas en la BMS se puede encontrar en <a href="https://vimeo.com/album/5309843"><em>Vimeo album 5309843</em></a>.</p>
   <div class="row">
     <div class="col-md-6" style="padding-top:1em;">
-       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/369919190?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
-       <p style="text-align:center;"><b style="color:#ee2523;">What is the probabilistic analysis of a condition number?</b><br/>Opening Conf. of the Thematic Einstein Semester, October 2019</p>
+       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/2F1Gs4kiICU" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
+       <p style="text-align:center;"><b style="color:#ee2523;">What is the probabilistic analysis of a condition number?</b><br/>Opening Conf. of the Thematic Einstein Semester, octubre de 2019</p>
     </div>
    <div class="col-md-6" style="padding-top:1em;">
-      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/305120572?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/aPLoIyKlegw" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
       <p style="text-align:center;"><b style="color:#ee2523;">What is the best voting system?</b><br/>&ldquo;What is...?&rdquo; Seminar, diciembre de 2018</p>
    </div>
    <div class="col-md-6" style="padding-top:1em;">
-     <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/281268225?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
+     <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/HR23righVBc" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
      <p style="text-align:center;"><b style="color:#ee2523;">What are semialgebraic sets in context?</b><br/>&ldquo;What is...?&rdquo; Seminar, junio de 2018</p>
    </div>
-   <div class="col-md-6" style="padding-top:1em;">
-      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/277075223?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
+   <!--<div class="col-md-6" style="padding-top:1em;">
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/EuBUrxnzwPw" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
       <p style="text-align:center;"><b style="color:#ee2523;">What are RP, co-RP, ZPP and all those random complexity clases?</b><br/>&ldquo;What is...?&rdquo; Seminar, junio de 2017</p>
-   </div>
-   <div class="col-md-6" style="padding-top:1em;">
-     <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/272577693?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
+   </div>-->
+   <!--<div class="col-md-6" style="padding-top:1em;">
+     <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/0nd5EVJSO0M" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
      <p style="text-align:center;"><b style="color:#ee2523;">The Niyogi-Smale-Weinberger Approximation Theorem</b><br/>6th BMS Student Conference, febrero de 2018</p>
-   </div>
-   <div class="col-md-6" style="padding-top:1em;">
-      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/222339083?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
+   </div>-->
+   <!--<div class="col-md-6" style="padding-top:1em;">
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/zsjJ7rl0M94" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
       <p style="text-align:center;"><b style="color:#ee2523;">The shadow of the hidden combinatorics of completely positive operators on Polynomial Identity Testing</b><br/>5th BMS Student Conference, febrero de 2017</p>
-   </div>
+   </div>-->
    <div class="col-md-6" style="padding-top:1em;">
-     <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/203591928?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
+     <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/20O2VtA7j5g" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
      <p style="text-align:center;"><b style="color:#ee2523;">What is the length of a potato?</b><br/>&ldquo;What is...?&rdquo; Seminar, enero de 2017</p>
    </div>
-   <div class="col-md-6" style="padding-top:1em;">
-      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/160594229?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
+   <!--<div class="col-md-6" style="padding-top:1em;">
+      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://www.youtube.com/embed/iOIo7g2aOVY" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
       <p style="text-align:center;"><b style="color:#ee2523;">What is an origami constructible number?</b><br/>&ldquo;What is...?&rdquo; Seminar, febrero de 2016</p>
-   </div>
+   </div>-->
   </div>
   <br/>
   <script src="https://player.vimeo.com/api/player.js"></script>
