--- a/non-research.html
+++ b/non-research.html
@@ -117,7 +117,7 @@
   </div>
   <hr>
   <div id="popmath">
-    <h2 class="display-4">Popular Mathematics</h2>
+    <h2 class="display-4">Communication/Popularization of Mathematics</h2>
     <p>
       My activity in the popularization of mathematics has been concentrated during my period as editor of the mathematics students' magazine $\pi kasle$. After that, I have been mainly inactive in this role, although I may want to come back to it at some moment in the future.
     </p>
