--- a/non-research_es.html
+++ b/non-research_es.html
@@ -120,7 +120,7 @@
   </div>
   <hr>
   <div id="popmath">
-    <h2 class="display-4">Divulgación</h2>
+    <h2 class="display-4">Divulgación científica</h2>
     <p>
       Mi actividad en la divulgación de las matemáticas se ha concentrado durante mi periodo como editor de la revista de las y los estudiantes de matemáticas $\pi kasle$. Después de ella, he estado mayormente inactivo en este papel, aunque me gustaría volver a la divulgación en algún momento en el futuro.
     </p>
