--- a/research_es.html
+++ b/research_es.html
@@ -138,48 +138,51 @@
   <h2 class="display-4">Artículos científicos y preprints</h2>
   <p style="margin:0;">Los siguientes son mi artículos científicos y preprints en los últimos años. Para una lista completa, consultar <a href="cv.html#publications">la lista de mi CV</a> o <a href="arXiv.html">mi lista de preprints de arXiv</a>.</p>
 
-    <br/><div class="row"><div class="col-md-12">
-    <h3>Preprints <a class="btn btn-arxiv" href="arXiv.html" role="button"><i class="ai ai-arxiv-square"></i> Lista de preprints de arXiv</a></h3>
-    </div></div>
+  <br/><div class="row"><div class="col-md-12">
+  <h3>Preprints <a class="btn btn-arxiv" href="arXiv.html" Labor="button"><i class="ai ai-arxiv-square"></i>Preprints en arXiv</a></h3>
+  </div></div>
 
-    <br/><div class="cv">
-      <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
-      <div class="year"></div><div class="paper"><h4>&emsp;I: Univariate Polynomials and Hypersurfaces</h4></div>
-     <div class="pretalktitle"></div><div class="collaborator">(Junto con <a href="https://who.paris.inria.fr/Elias.Tsigaridas/index.html">Elias Tsigaridas</a>)</div>
-     <div class="pretalktitle"></div><div class="collaborator">Aceptado en ISSAC'20.</div>
-     <!--<div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto and E. Tsigaridas. Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces. In <i>Proceedings of the 2020 on International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'20, páginas xyz-XYZ. ACM, New York, 2020. <span><a href="https://doi.org/10.1145/3373207.3404054">DOI 10.1145/3373207.3404054</a></span></div>-->
-    </div>
+  <br/><div class="cv">
+  <div class="year"></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
+   <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> and <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a>)</div>
+   <div class="pretalktitle"></div><div class="collaborator">This is a journal version of <em>Plantinga-Vegter algorithm takes average polynomial time</em>.</div>
+  </div>
 
-    <br/><div class="cv">
-    <div class="year"></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
-     <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> and <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a>)</div>
-     <div class="pretalktitle"></div><div class="collaborator">Este es una versión para revista de <em>Plantinga-Vegter algorithm takes average polynomial time</em>.</div>
-    </div>
+  <br/><div class="cv">
+  <div class="year"><h4>2019</h4></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets. II: General Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1903.10710" role="button">arXiv:1903.10710</a></h4></div>
+   <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/prof_dr_peter_buergisser/">Peter B&uuml;rgisser</a> and <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a>)</div>
+  </div>
 
-    <br/><div class="cv">
-    <div class="year"><h4>2019</h4></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets. II: General Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1903.10710" role="button">arXiv:1903.10710</a></h4></div>
-     <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/prof_dr_peter_buergisser/">Peter B&uuml;rgisser</a> and <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a>)</div>
-    </div>
+  <br/><div class="row"><div class="col-md-12">
+  <h3>Artículos científicos de revista</h3>
+  </div></div>
 
-    <br/><div class="row"><div class="col-md-12">
-    <h3>Artículos científicos</h3>
-    </div></div>
+  <br/><div class="cv">
+  <div class="year"><h4>2019</h4></div><div class="paper"><h4>&emsp;On the Number of Real Zeros of Random Fewnomials
+  <a class="btn btn-arxiv" href="https://arxiv.org/abs/1811.09425"  role="button">arXiv:1811.09425</a></h4></div>
+   <div class="pretalktitle"></div><div class="collaborator"> P. B&uuml;rgisser, A.A. Erg&uuml;r and J. Tonelli-Cueto. On the Number of Real Zeros of Random Fewnomials, <i>SIAM Journal on Applied Algebra and Geometry</i>, 3(4):721–732, 2019. <span><a href="https://doi.org/10.1137/18M1228682">DOI 10.1137/18M1228682</a></span></div>
+  </div>
 
-    <br/><div class="cv">
-    <div class="year"><h4>2019</h4></div><div class="paper"><h4>&emsp;On the Number of Real Zeros of Random Fewnomials
-    <a class="btn btn-arxiv" href="https://arxiv.org/abs/1811.09425"  role="button">arXiv:1811.09425</a></h4></div>
-     <div class="pretalktitle"></div><div class="collaborator"> P. B&uuml;rgisser, A.A. Erg&uuml;r and J. Tonelli-Cueto. On the Number of Real Zeros of Random Fewnomials (Inglés) [Sobre el número de ceros reales de oligonomios aleatorios], <i>SIAM Journal on Applied Algebra and Geometry</i>, 3(4):721–732, 2019. <span><a href="https://doi.org/10.1137/18M1228682">DOI 10.1137/18M1228682</a></span></div>
-    </div>
+  <br/><div class="cv">
+  <div class="year"></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets. I: Lax Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1807.06435"  role="button">arXiv:1807.06435</a></h4></div>
+   <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker and J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. I: Lax Formulas, <i>Foundations of Computational Mathematics</i>, 20(1):71-119, 2020. First on-line: May 2019. <span><a href="https://doi.org/10.1007/s10208-019-09418-y">DOI 10.1007/s10208-019-09418-y</a></span></div>
+  </div>
 
-    <br/><div class="cv">
-    <div class="year"></div><div class="paper"><h4>&emsp;Plantinga-Vegter algorithm takes average polynomial time<a class="btn btn-arxiv" href="https://arxiv.org/abs/1901.09234"  role="button">arXiv:1901.09234</a></h4></div>
-     <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r y J. Tonelli-Cueto. Plantinga-Vegter Algorithm takes Average Polynomial Time (Inglés) [El algoritmo de Plantinga-Vegter toma tiempo medio polinómico]. In <i>Proceedings of the 2019 on International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'19, páginas 114-121. ACM, New York, 2019. <span><a href="https://doi.org/10.1145/3326229.3326252">DOI 10.1145/3326229.3326252</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3326229.3326252?cid=99659444592">[Author-Ized LINK]</a></span></div>
-    </div>
+  <br/><div class="row"><div class="col-md-12">
+  <h3>Artículos científicos de conferencia</h3>
+  </div></div>
 
-    <br/><div class="cv">
-    <div class="year"></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets. I: Lax Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1807.06435"  role="button">arXiv:1807.06435</a></h4></div>
-     <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker and J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. I: Lax Formulas (Inglés) [Computando la Homología de Conjuntos Semialgebraicos. I: Fórmulas Laxas], <i>Foundations of Computational Mathematics</i>, 20(1):71-119, 2020. Versión on-line: mayo del 2019. <span><a href="https://doi.org/10.1007/s10208-019-09418-y">DOI 10.1007/s10208-019-09418-y</a></span></div>
-    </div>
+  <br/><div class="cv">
+  <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
+  <div class="year"></div><div class="paper"><h4>&emsp;I: Univariate Polynomials and Hypersurfaces</h4></div>
+  <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r and J. Tonelli-Cueto. Plantinga-Vegter Algorithm takes Average Polynomial Time. In <i>Proceedings of the 2020 on International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'20, pages 434-441. ACM, New York, 2020. <span><a href="https://doi.org/10.1145/3373207.3404054">DOI 10.1145/3373207.3404054</a></span> <!--<span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3326229.3326252?cid=99659444592">[Author-Ized LINK]</a></span>--></div>
+  </div>
+
+
+  <br/><div class="cv">
+  <div class="year"></div><div class="paper"><h4>&emsp;Plantinga-Vegter algorithm takes average polynomial time<a class="btn btn-arxiv" href="https://arxiv.org/abs/1901.09234"  role="button">arXiv:1901.09234</a></h4></div>
+   <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r and J. Tonelli-Cueto. Plantinga-Vegter Algorithm takes Average Polynomial Time. In <i>Proceedings of the 2019 on International Symposium on Symbolic and Algebraic Computation</i>, ISSAC'19, pages 114-121. ACM, New York, 2019. <span><a href="https://doi.org/10.1145/3326229.3326252">DOI 10.1145/3326229.3326252</a></span> <span><a style="color:#FF69B4;" href="https://dl.acm.org/doi/10.1145/3326229.3326252?cid=99659444592">[Author-Ized LINK]</a></span></div>
+  </div>
 </div>
 <hr>
 <div id="other">
