--- a/cv_es.html
+++ b/cv_es.html
@@ -500,7 +500,7 @@
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          <br/><div class="cv">
-         <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2020">45th International Symposium on Symbolic and Algebraic Computations (ISSAC 2020)</a><span style="float:right;"><a href="https://www.youtube.com/watch?v=OmXZw7ZbCsA">Vídeo</a></span></h4></div>
+         <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2020">45th International Symposium on Symbolic and Algebraic Computations (ISSAC'20)</a><span style="float:right;"><a href="https://www.youtube.com/watch?v=OmXZw7ZbCsA">Vídeo</a></span></h4></div>
            <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Ponencia on-line por la pandemia del COVID-19)<span style="float:right;"><a href="pdf/ISSAC20_slides.pdf">Diapositivas</a></span></div>
            <div class="pretalktitle"></div><div class="talktitle">Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</div>
          </div>
@@ -539,7 +539,7 @@
 </div>
 
 <br/><div class="cv">
-<div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2019">44th International Symposium on Symbolic and Algebraic Computations (ISSAC19)</a><span style="float:right;"><a href="pdf/ISSAC19_slides.pdf">Diapositivas</a></span></h4></div>
+<div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2019">44th International Symposium on Symbolic and Algebraic Computations (ISSAC'19)</a><span style="float:right;"><a href="pdf/ISSAC19_slides.pdf">Diapositivas</a></span></h4></div>
   <div class="pretalktitle"></div><div class="talktitle">Plantinga-Vegter algorithm takes average polynomial time</div>
 </div>
 
@@ -1199,9 +1199,9 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <div class="year">
 <h4>2020</h4>
 </div><div class="title">
-<h4>&emsp;<a href="http://issac-conference.org/2020/">45th International Symposium on Symbolic and Algebraic Computations (ISSAC 2020)</a></h4></div>
+<h4>&emsp;<a href="http://issac-conference.org/2020/">45th International Symposium on Symbolic and Algebraic Computations (ISSAC'20)</a></h4></div>
 <div class="year"></div><div class="title">
-<h4>&ensp;&emsp;<em>(45º Simposio Internacional en Computación Algebraica y Simbólica (ISSAC 2020))</em></h4></div>
+<h4>&ensp;&emsp;<em>(45º Simposio Internacional en Computación Algebraica y Simbólica (ISSAC'20))</em></h4></div>
   <div class="property">Organizador:</div><div class="value">	Ioannis Z. Emiris and Lihong Zhi (General Chairs) &ndash; <button onclick="show(1902)">Show/Hide list</button></div><div style="display:none;" id="ISSAC2020org">
   <div class="property"></div><div class="value">Anton Leykin (Program Committee Chair)</div>
   <div class="property"></div><div class="value">Ilias S. Kotsireas (Local Arrangements Chair)</div>
@@ -1282,9 +1282,9 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
    <br/><div class="cv">
    <div class="year">
    </div><div class="title">
-   <h4>&emsp;<a href="http://issac-conference.org/2019/">44th International Symposium on Symbolic and Algebraic Computations (ISSAC 2019)</a></h4></div>
+   <h4>&emsp;<a href="http://issac-conference.org/2019/">44th International Symposium on Symbolic and Algebraic Computations (ISSAC'19)</a></h4></div>
    <div class="year"></div><div class="title">
-   <h4>&ensp;&emsp;<em>(44º Simposio Internacional en Computación Algebraica y Simbólica (ISSAC 2019))</em></h4></div>
+   <h4>&ensp;&emsp;<em>(44º Simposio Internacional en Computación Algebraica y Simbólica (ISSAC'19))</em></h4></div>
      <div class="property">Organizador:</div><div class="value">James Davenport y Dongming Wang (General Chairs) &ndash; <button onclick="show(1901)">Show/Hide list</button></div><div style="display:none;" id="ISSAC2019org">
      <div class="property"></div><div class="value">Manuel Kauers (Program Committee Chair)</div>
      <div class="property"></div><div class="value">Chenqi Mou y Zhikun She (Local Arrangements Chairs)</div>
