--- a/cv.html
+++ b/cv.html
@@ -516,7 +516,7 @@
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          <br/><div class="cv">
-         <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2020">45th International Symposium on Symbolic and Algebraic Computations (ISSAC 2020)</a><span style="float:right;"><a href="https://www.youtube.com/watch?v=OmXZw7ZbCsA">Video</a></span></h4></div>
+         <div class="year"><h4>2020</h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2020">45th International Symposium on Symbolic and Algebraic Computations (ISSAC'20)</a><span style="float:right;"><a href="https://www.youtube.com/watch?v=OmXZw7ZbCsA">Video</a></span></h4></div>
            <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line talk due to the COVID-19 pandemic)<span style="float:right;"><a href="pdf/ISSAC20_slides.pdf">Slides</a></span></div>
            <div class="pretalktitle"></div><div class="talktitle">Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</div>
          </div>
@@ -556,7 +556,7 @@
 </div>
 
 <br/><div class="cv">
-<div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2019">44th International Symposium on Symbolic and Algebraic Computations (ISSAC 2019)</a><span style="float:right;"><a href="pdf/ISSAC19_slides.pdf">Slides</a></span></h4></div>
+<div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2019">44th International Symposium on Symbolic and Algebraic Computations (ISSAC'19)</a><span style="float:right;"><a href="pdf/ISSAC19_slides.pdf">Slides</a></span></h4></div>
   <div class="pretalktitle"></div><div class="talktitle">Plantinga-Vegter algorithm takes average polynomial time</div>
 </div>
 
@@ -1202,7 +1202,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <div class="year">
 <h4>2020</h4>
 </div><div class="title">
-<h4>&emsp;<a href="http://issac-conference.org/2020/">45th International Symposium on Symbolic and Algebraic Computations (ISSAC 2020)</a></h4></div>
+<h4>&emsp;<a href="http://issac-conference.org/2020/">45th International Symposium on Symbolic and Algebraic Computations (ISSAC'20)</a></h4></div>
   <div class="property">Organizer:</div><div class="value">	Ioannis Z. Emiris and Lihong Zhi (General Chairs) &ndash; <button onclick="show(1902)">Show/Hide list</button></div><div style="display:none;" id="ISSAC2020org">
   <div class="property"></div><div class="value">Anton Leykin (Program Committee Chair)</div>
   <div class="property"></div><div class="value">Ilias S. Kotsireas (Local Arrangements Chair)</div>
@@ -1280,7 +1280,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
    <div class="year">
 
    </div><div class="title">
-   <h4>&emsp;<a href="http://issac-conference.org/2019/">44th International Symposium on Symbolic and Algebraic Computations (ISSAC 2019)</a></h4></div>
+   <h4>&emsp;<a href="http://issac-conference.org/2019/">44th International Symposium on Symbolic and Algebraic Computations (ISSAC'19)</a></h4></div>
      <div class="property">Organizer:</div><div class="value">James Davenport and Dongming Wang (General Chairs) &ndash; <button onclick="show(1901)">Show/Hide list</button></div><div style="display:none;" id="ISSAC2019org">
      <div class="property"></div><div class="value">Manuel Kauers (Program Committee Chair)</div>
      <div class="property"></div><div class="value">Chenqi Mou and Zhikun She (Local Arrangements Chairs)</div>
